--- a/frontend/src/app/order-list/order-list.component.html
+++ b/frontend/src/app/order-list/order-list.component.html
@@ -1,87 +1,80 @@
-<mat-card class="container">
-  <mat-card-title><h2>Order list</h2></mat-card-title>
-  <mat-card-content class="content">
-    <table mat-table [dataSource]="items" class="mat-elevation-z8">
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>Order id</th>
-        <td mat-cell *matCellDef="let item">{{ item.id }}</td>
-      </ng-container>
+<table mat-table [dataSource]="items" class="mat-elevation-z8">
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef>Order id</th>
+    <td mat-cell *matCellDef="let item">{{ item.id }}</td>
+  </ng-container>
 
-      <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef>Date</th>
-        <td mat-cell *matCellDef="let item">
-          {{ getFormattedDate(item.date.date) }}
-        </td>
-      </ng-container>
+  <ng-container matColumnDef="date">
+    <th mat-header-cell *matHeaderCellDef>Date</th>
+    <td mat-cell *matCellDef="let item">
+      {{ getFormattedDate(item.date.date) }}
+    </td>
+  </ng-container>
 
-      <ng-container matColumnDef="customer">
-        <th mat-header-cell *matHeaderCellDef>Customer</th>
-        <td mat-cell *matCellDef="let item">{{ item.customer }}</td>
-      </ng-container>
+  <ng-container matColumnDef="customer">
+    <th mat-header-cell *matHeaderCellDef>Customer</th>
+    <td mat-cell *matCellDef="let item">{{ item.customer }}</td>
+  </ng-container>
 
-      <ng-container matColumnDef="address">
-        <th mat-header-cell *matHeaderCellDef>Address</th>
-        <td mat-cell *matCellDef="let item">{{ item.address }}</td>
-      </ng-container>
+  <ng-container matColumnDef="address">
+    <th mat-header-cell *matHeaderCellDef>Address</th>
+    <td mat-cell *matCellDef="let item">{{ item.address }}</td>
+  </ng-container>
 
-      <ng-container matColumnDef="city">
-        <th mat-header-cell *matHeaderCellDef>City</th>
-        <td mat-cell *matCellDef="let item">{{ item.city }}</td>
-      </ng-container>
+  <ng-container matColumnDef="city">
+    <th mat-header-cell *matHeaderCellDef>City</th>
+    <td mat-cell *matCellDef="let item">{{ item.city }}</td>
+  </ng-container>
 
-      <ng-container matColumnDef="postcode">
-        <th mat-header-cell *matHeaderCellDef>Postcode</th>
-        <td mat-cell *matCellDef="let item">{{ item.postcode }}</td>
-      </ng-container>
+  <ng-container matColumnDef="postcode">
+    <th mat-header-cell *matHeaderCellDef>Postcode</th>
+    <td mat-cell *matCellDef="let item">{{ item.postcode }}</td>
+  </ng-container>
 
-      <ng-container matColumnDef="country">
-        <th mat-header-cell *matHeaderCellDef>Country</th>
-        <td mat-cell *matCellDef="let item">{{ item.country }}</td>
-      </ng-container>
+  <ng-container matColumnDef="country">
+    <th mat-header-cell *matHeaderCellDef>Country</th>
+    <td mat-cell *matCellDef="let item">{{ item.country }}</td>
+  </ng-container>
 
-      <ng-container matColumnDef="amount">
-        <th mat-header-cell *matHeaderCellDef>Amount</th>
-        <td mat-cell *matCellDef="let item">{{ item.amount }}</td>
-      </ng-container>
+  <ng-container matColumnDef="amount">
+    <th mat-header-cell *matHeaderCellDef>Amount</th>
+    <td mat-cell *matCellDef="let item">{{ item.amount }}</td>
+  </ng-container>
 
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let item">{{ item.status }}</td>
-      </ng-container>
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef>Status</th>
+    <td mat-cell *matCellDef="let item">{{ item.status }}</td>
+  </ng-container>
 
-      <ng-container matColumnDef="deleted">
-        <th mat-header-cell *matHeaderCellDef>Deleted</th>
-        <td mat-cell *matCellDef="let item">{{ item.deleted }}</td>
-      </ng-container>
+  <ng-container matColumnDef="deleted">
+    <th mat-header-cell *matHeaderCellDef>Deleted</th>
+    <td mat-cell *matCellDef="let item">{{ item.deleted }}</td>
+  </ng-container>
 
-      <ng-container matColumnDef="last_modified">
-        <th mat-header-cell *matHeaderCellDef>Last Modified</th>
-        <td mat-cell *matCellDef="let item">
-          {{ getFormattedDate(item.lastModified.date) }}
-        </td>
-      </ng-container>
+  <ng-container matColumnDef="last_modified">
+    <th mat-header-cell *matHeaderCellDef>Last Modified</th>
+    <td mat-cell *matCellDef="let item">
+      {{ getFormattedDate(item.lastModified.date) }}
+    </td>
+  </ng-container>
 
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Actions</th>
-        <td mat-cell *matCellDef="let item">delete</td>
-      </ng-container>
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <td mat-cell *matCellDef="let item">delete</td>
+  </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-      <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
-    </table>
-  </mat-card-content>
-  <mat-card-footer class="footer-widget">
-    <div class="total">Total: {{ total }}</div>
-    <mat-form-field appearance="fill">
-      <mat-label>No of listed items</mat-label>
-      <mat-select>
-        <mat-option
-          *ngFor="let maxItems of maxNoOfItems"
-          [value]="maxItems.value"
-        >
-          {{ maxItems.viewValue }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-  </mat-card-footer>
-</mat-card>
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
+</table>
+<div class="paginator">
+  <mat-paginator
+    (page)="handlePageEvent($event)"
+    [length]="total"
+    [pageSize]="pageSize"
+    [showFirstLastButtons]="showFirstLastButtons"
+    [pageSizeOptions]="pageSizeOptions"
+    [pageIndex]="0"
+    aria-label="Select page"
+  >
+  </mat-paginator>
+</div>
