--- a/frontend/src/app/order-list/order-list.component.html
+++ b/frontend/src/app/order-list/order-list.component.html
@@ -61,7 +61,9 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let item">
-      <div *ngIf="item.status == 'pending'; else noAction">Delete</div>
+      <div *ngIf="item.status == 'pending'; else noAction">
+        <cancel-item [orderId]="item.id"></cancel-item>
+      </div>
       <ng-template #noAction>No actions</ng-template>
     </td>
   </ng-container>
