added cancel route and action

--- a/frontend/src/app/order-list/actions/cancel-item.component.html
+++ b/frontend/src/app/order-list/actions/cancel-item.component.html
@@ -1,9 +1,9 @@
 <button
   mat-mini-fab
-  color="primary"
+  color="warn"
   aria-label="delete order"
   type="button"
-  (click)="handleCancelOrder()"
+  (click)="action(args)"
   clickable
 >
   <mat-icon>delete</mat-icon>
