--- a/frontend/src/app/order-list/order-list.component.html
+++ b/frontend/src/app/order-list/order-list.component.html
@@ -62,7 +62,10 @@
     <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let item">
       <div *ngIf="item.status == 'pending'; else noAction">
-        <cancel-item [orderId]="item.id"></cancel-item>
+        <cancel-item
+          [action]="cancelOrderHandler"
+          [args]="item.id"
+        ></cancel-item>
       </div>
       <ng-template #noAction>No actions</ng-template>
     </td>
